--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /.cproject
 /.travis.yml
 /.settings/
+/vectorbenchMP.exe
+/vectorbenchNATIVE_O0.exe
+/vectorbenchNATIVE_O1.exe
+/vectorbenchNATIVE_O2.exe
+/vectorbenchNATIVE_O3.exe
+/vectorbenchNATIVE_PROF.exe
+/vectorbenchNATIVE.exe
